added second navigation bar division

--- a/index.html
+++ b/index.html
@@ -24,17 +24,56 @@
             <a href="#">Gits & Cards</a>
             <a href="#">Money</a>
         </nav>
-        <img src = Assets/image_360-3.png alt = "Image of shopping basket"></img>
-        <img src = Assets/image_360-1.png alt = "Image of shopping basket"></img>
+        <img src = Assets/image_360-3.png alt = "Account symbol"></img>
+        <img src = Assets/image_360-1.png alt = "Google maps finder icon"></img>
         <img src = Assets/image_360-2.png alt = "Image of shopping basket"></img>
     </header>
     <main>
-        <img src = Assets/image_720.png alt = "Image of shopping basket"></img>
-        <div>
-            <h2></h2>
-
-
+        <img src = Assets/image_720.png alt = "Huge image - easter themed"></img>
+    
+        <div id = "second_navigation">
+            </div>
+            <img src = Assets/books-homepage-icons-2024.png alt = "Books Icon"></img>
+                <h2>Books</h2>
+            </div>
+            </div>
+            <img src = Assets/stationery-homepage-icons-2024.png alt = "Stationary Icon"></img>
+                <h2>Stationary</h2>
+            </div>
+            </div>
+            <img src = Assets/toys-games-puzzle-icon.png alt = "Toys and Games"></img>
+                <h2>Toys & Games</h2>
+            </div>
+             </div>
+             <img src = Assets/artandcraft-homepage-icons-2024.png alt = "Art and Craft Icon"></img>
+                <h2>Art & Craft</h2>
+            </div>
+            </div>
+            <img src = Assets/gifts-homepage-icons-2024.png alt = "Gift and Card Icon"></img>
+                <h2>Gifts & Cards</h2>
+            </div>
+            </div>
+            <img src = Assets/sales-homepage-icon-2024.png alt = "Sale and Offers Icon"></img>
+                <h2>Sale & Offers</h2>
+            </div>
+            </div>
+            <img src = Assets/musictv-homepage-icon-2024.png alt = "Music film and tv icon"></img>
+                <h2>Music, Film & TV</h2>
+            </div>
+            </div>
+            <img src = Assets/office-homepage-icons-2024.png alt = "Office icon"></img>
+                <h2>Office</h2>
+            </div>
+            </div>
+            <img src = Assets/magazines-homepage-icons-2024.png alt = "Magazines icon"></img>
+                <h2>Magazines</h2>
+            </div>
         </div>
+
+
+
+
+
     </main>
     <footer>
 
