added featured division to main section of website

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
         <img src = Assets/image_360-2.png alt = "Image of shopping basket"></img>
     </header>
     <main>
-        <img src = Assets/image_720.png alt = "Huge image - easter themed"></img>
-    
-        <div id = "second_navigation">
+
+<!-- HUGE IMAGE THAT ENCOMPASES THE ENTIRE PAGE WIDTH  -->
+        <img src = Assets/image_720.png alt = "Huge image - easter themed"></img> 
+
+<!-- second navigation bar but with images -->
+        <div class = "second_navigation">
             </div>
             <img src = Assets/books-homepage-icons-2024.png alt = "Books Icon"></img>
                 <h2>Books</h2>
@@ -70,11 +73,37 @@
             </div>
         </div>
 
+<!-- Featured -->
 
-
-
-
+    <div class = "Featured">
+        </div>
+        <img src = Assets/eastercraft-050324-6tile.jpg  alt = "Easter Craft img"></img>
+            <h2>Easter Craft from £1</h2>
+        </div>
+        </div>
+        <img src = Assets/eastertreats-060324-6tile.jpg alt = "Easter treats img"></img>
+            <h2>Easter Treats</h2>
+        </div>
+        </div>
+        <img src = Assets/selectedkidsbooks-060324-6tile.jpg alt = "selected kids img"></img>
+            <h2>3 for 2 Selected Kids Books</h2>
+        </div>
+        </div>
+        <img src = Assets/childrens-botm-280224-6tile.jpg alt = "childrens book of the month"></img>
+            <h2>Children's Book of the Month</h2>
+        </div>
+        </div>
+        <img src = Assets/revisionessentials-060324-6tile.jpg alt = "revision essentials img"></img>
+            <h2>3 for 2 Revision Essentials</h2>
+        </div>
+        </div>
+        <img src = Assets/clearance-070224-6tile.jpg alt = "sale icon"></img>
+            <h2>Sale</h2>
+        </div>
+    </div>
     </main>
+
+    
     <footer>
 
 
