Added stay connected section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,28 @@
             <h2>Sale</h2>
         </div>
     </div>
+
+<!-- Contact form-->
+    <section class="contact">
+        <div class="contact__text">
+            <h2>Stay connected</h2>
+            <img src = Assets/download.png alt = "facebook icon"></img>
+            <img src = Assets/image_360-4.png alt = "instagram icon"></img>
+            <img src = Assets/image_360-5.png alt = "twitter icon"></img>
+            <img src = Assets/image_360-6.png alt = "youtube icon"></img>
+            <img src = Assets/image_360-7.png alt = "pinterest icon"></img>
+
+        </div>
+        <div class="contact__form">
+            <!-- Our form will go here -->
+            <form>
+                <input type="text" name="name" placeholder="Your name" id="name">
+                <input type="email" name="email" placeholder="Your email" id="email">
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+    </section>
+
     </main>
 
     
