--- a/index.html
+++ b/index.html
@@ -122,12 +122,15 @@
             </form>
         </div>
     </section>
-
     </main>
-
-    
+<!-- Footer for copyright-->
     <footer>
-
+        <div>
+            <p> &copy; WHSmith 2024</p>
+        </div>
+    <div class="footer__logo">
+        <img src="Assets/image_360-8.png" alt="WHSmith copyright logo">
+    </div>
 
     </footer>
 
