Added featured section css

--- a/index.html
+++ b/index.html
@@ -45,39 +45,39 @@
 
 <!-- second navigation bar but with images -->
         <div class = "second_navigation">
-            </div>
+            <div>
             <img src = Assets/books-homepage-icons-2024.png alt = "Books Icon"></img>
                 <h2>Books</h2>
             </div>
-            </div>
+            <div>
             <img src = Assets/stationery-homepage-icons-2024.png alt = "Stationary Icon"></img>
                 <h2>Stationary</h2>
             </div>
-            </div>
+            <div>
             <img src = Assets/toys-games-puzzle-icon.png alt = "Toys and Games"></img>
                 <h2>Toys & Games</h2>
             </div>
-             </div>
+             <div>
              <img src = Assets/artandcraft-homepage-icons-2024.png alt = "Art and Craft Icon"></img>
                 <h2>Art & Craft</h2>
             </div>
-            </div>
+            <div>
             <img src = Assets/gifts-homepage-icons-2024.png alt = "Gift and Card Icon"></img>
                 <h2>Gifts & Cards</h2>
             </div>
-            </div>
+            <div>
             <img src = Assets/sales-homepage-icon-2024.png alt = "Sale and Offers Icon"></img>
                 <h2>Sale & Offers</h2>
             </div>
-            </div>
+            <div>
             <img src = Assets/musictv-homepage-icon-2024.png alt = "Music film and tv icon"></img>
                 <h2>Music, Film & TV</h2>
             </div>
-            </div>
+            <div>
             <img src = Assets/office-homepage-icons-2024.png alt = "Office icon"></img>
                 <h2>Office</h2>
             </div>
-            </div>
+            <div>
             <img src = Assets/magazines-homepage-icons-2024.png alt = "Magazines icon"></img>
                 <h2>Magazines</h2>
             </div>
@@ -86,27 +86,29 @@
 <!-- Featured -->
 
     <div class = "Featured">
-        </div>
+        <h1>Featured</h1>
+        <div class = "featured_icons">
+        <div>
         <img src = Assets/eastercraft-050324-6tile.jpg  alt = "Easter Craft img"></img>
             <h2>Easter Craft from £1</h2>
         </div>
-        </div>
+        <div>
         <img src = Assets/eastertreats-060324-6tile.jpg alt = "Easter treats img"></img>
             <h2>Easter Treats</h2>
         </div>
-        </div>
+        <div>
         <img src = Assets/selectedkidsbooks-060324-6tile.jpg alt = "selected kids img"></img>
             <h2>3 for 2 Selected Kids Books</h2>
         </div>
-        </div>
+        <div>
         <img src = Assets/childrens-botm-280224-6tile.jpg alt = "childrens book of the month"></img>
             <h2>Children's Book of the Month</h2>
         </div>
-        </div>
+        <div>
         <img src = Assets/revisionessentials-060324-6tile.jpg alt = "revision essentials img"></img>
             <h2>3 for 2 Revision Essentials</h2>
         </div>
-        </div>
+        <div>
         <img src = Assets/clearance-070224-6tile.jpg alt = "sale icon"></img>
             <h2>Sale</h2>
         </div>
