contact section css

--- a/index.html
+++ b/index.html
@@ -117,13 +117,16 @@
 <!-- Contact form-->
     <section class="contact">
         <div class="contact__text">
+            <div class = "contact_header">
             <h2>Stay connected</h2>
+            </div>
+            <div class = "contact__icons">
             <img src = Assets/download.png alt = "facebook icon"></img>
             <img src = Assets/image_360-4.png alt = "instagram icon"></img>
             <img src = Assets/image_360-5.png alt = "twitter icon"></img>
             <img src = Assets/image_360-6.png alt = "youtube icon"></img>
             <img src = Assets/image_360-7.png alt = "pinterest icon"></img>
-
+        </div>
         </div>
         <div class="contact__form">
             <!-- Our form will go here -->
